prusti-tests/tests/verify_overflow/fail/core_proof/Counterexamples/account-fail.rs
// compile-flags: -Punsafe_core_proof=true

use prusti_contracts::*;

pub struct Account {
    balance: i32,
}

fn get_balance(acc: Account) -> i32 {
    acc.balance
}


#[ensures(result)]
fn has_money(acc: Account) -> bool {
    get_balance(acc) > 0
}